SERVER-9082 Accept any valid value in id field of dbref