src/mongo/dbtests/jstests.cpp
@@ -1061,6 +1061,32 @@ namespace JSTests {
         class InformalDBRefTest : public TestRoundTrip {
             virtual BSONObj bson() const {
                 BSONObjBuilder b;
+                BSONObjBuilder subBuilder(b.subobjStart("a"));
+                subBuilder.append("$ref", "ns");
+                subBuilder.append("$id", "000000000000000000000000");
+                subBuilder.done();
+                return b.obj();
+            }
+
+            // Don't need to return anything because we are overriding both jsonOut and jsonIn
+            virtual string json() const { return ""; }
+
+            // Need to override these because the JSON doesn't actually round trip.
+            // An object with "$ref" and "$id" fields is handled specially and different on the way out.
+            virtual string jsonOut() const {
+                return "{ \"a\" : DBRef( \"ns\", \"000000000000000000000000\" ) }";
+            }
+            virtual string jsonIn() const {
+                stringstream ss;
+                ss << "{ \"a\" : { \"$ref\" : \"ns\" , " <<
+                                "\"$id\" : \"000000000000000000000000\" } }";
+                return ss.str();
+            }
+        };
+
+        class InformalDBRefOIDTest : public TestRoundTrip {
+            virtual BSONObj bson() const {
+                BSONObjBuilder b;
                 OID o;
                 memset( &o, 0, 12 );
                 BSONObjBuilder subBuilder(b.subobjStart("a"));
@@ -1387,6 +1413,7 @@ namespace JSTests {
             add< RoundTripTests::DBRefTest >();
             add< RoundTripTests::DBPointerTest >();
             add< RoundTripTests::InformalDBRefTest >();
+            add< RoundTripTests::InformalDBRefOIDTest >();
             add< RoundTripTests::InformalDBRefExtraFieldTest >();
             add< NoReturnSpecified >();
         }
